--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.css" />
     <script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.min.js"></script>
 
-    <!-- 数据可视化类库 -->
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/britecharts@2/dist/bundled/britecharts.min.js"></script>
     <script>
       window.leaflet =window.L;
     </script>
