更新登录页背景色

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
   <style>
     #app {
       min-height: 100vh;
+     
+    }
+    .auth{
+      background-image: url("img/bg.svg");
     }
     .CodeMirror {
       border: 0px solid #eee;
