发布新版本增加固件文件为ota特性做准备

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <!-- built files will be auto injected -->
   </body>
   <style>
+    .custom-file-input:lang(zh) ~ .custom-file-label::after {
+      content: '浏览';
+    }
     #app {
       min-height: 100vh;
      
